Update build.gradle. Style home page and results page.